--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <!--<link rel="stylesheet" href="styles/main.css">-->
+        <link rel="stylesheet" href="styles/main.css">
 
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -23,45 +23,10 @@
         <![endif]-->
 
 
-        <div class="container">
-            <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <h3 class="text-muted">react</h3>
-            </div>
 
-            <div class="jumbotron" id="app">
-                <!--<h1>'Allo, 'Allo!</h1>-->
-                <!--<p class="lead">Always a pleasure scaffolding your apps.</p>-->
-                <!--<p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>-->
-            </div>
-
-            <div id="content" class="row marketing">
-                <div class="col-lg-6">
-                    <h4>HTML5 Boilerplate</h4>
-                    <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-
-                    <h4>Sass with Compass</h4>
-                    <p>Compass is an open-source CSS Authoring Framework that uses Sass.</p>
-
-
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
-
-                </div>
-            </div>
-
-            <div class="footer">
-                <p>♥ from the Yeoman team</p>
-            </div>
-
+        <div class="jumbotron" id="app">
         </div>
+
 
 
         <!-- build:js scripts/vendor.js -->
@@ -73,7 +38,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
         <script src="scripts/app.js" type="text/jsx"></script>
-        <script src="scripts/ui/Timer.js" type="text/jsx"></script>
+        <!--<script src="scripts/ui/Timer.js" type="text/jsx"></script>-->
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
